<resources>
    <string name="app_name">IMC_Calculadoras</string>
    <string name="salir">Salir</string>
    <string name="hombres">Hombres</string>
    <string name="mujeres">Mujeres</string>
    <string name="altura">Altura</string>
    <string name="_120_0_200_0">120.0 – 200.0 cm</string>
    <string name="signomujer">SignoMujer</string>
    <string name="calcular">Calcular</string>
    <string name="peso">Peso</string>
    <string name="valor_peso">60</string>
    <string name="valor_altura">20</string>
    <string name="edad">Edad</string>
    <string name="salirIMC">Salir</string>
    <string name="resultado">Resultado</string>
    <string name="explicaci_n_de_resultado">Explicación de resultado</string>
    <string name="pesomenos">PESO -</string>
    <string name="pesomas">PESO +</string>
    <string name="edadmenos">EDAD -</string>
    <string name="edadmas">EDAD +</string>
    <string name="textoInicioact4">Calculadora IMC</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>qw
    <string name="sumar">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="restar">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="dividor">/</string>
    <string name="ce">CE</string>
    <string name="igual">=</string>
    <string name="multiplicar">*</string>
    <string name="_0">0</string>
    <string name="salircalcalvaro">SALIR</string>
    <string name="c">C</string>
    <string name="punto">.</string>
    <string name="calculadora">Calculadora</string>
    <string name="calculadora_Guille_1">1</string>
    <string name="calculadora_Guille_2">2</string>
    <string name="calculadora_Guille_3">3</string>
    <string name="calculadora_Guille_divSimbol">/</string>
    <string name="calculadora_Guille_4">4</string>
    <string name="calculadora_Guille_5">5</string>
    <string name="calculadora_Guille_6">6</string>
    <string name="calculadora_Guille_multSimbol">x</string>
    <string name="calculadora_Guille_7">7</string>
    <string name="calculadora_Guille_8">8</string>
    <string name="calculadora_Guille_9">9</string>
    <string name="calculadora_Guille_substSimbol">-</string>
    <string name="calculadora_Guillece">CE</string>
    <string name="calculadora_Guille_0">0</string>
    <string name="calculadora_Guille_eqSimbol">=</string>
    <string name="calculadora_Guille_addSimbol">+</string>
    <string name="calculadora_GuilleinitialStr">______</string>
    <string name="calculadora_GuilletxtPanel1">%1$s</string>
    <string name="calculadora_GuilletxtPanel2">%1$s</string>
    <string name="calculadora_GuilleTitulo">Calculadora Guillermo</string>
    <string name="calculadora_GuilleDecimal">.</string>
    <string name="calculadora_GuilleBackspace"><![CDATA[<]]></string>
</resources>