<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculadora_GuilleTitulo"
        android:textStyle="bold"
        android:textSize="40sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/inputTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView"
        android:layout_marginTop="16dp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputTextView"
        android:layout_marginTop="16dp"
        android:textColor="#000000" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTextView"
        android:layout_marginTop="32dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_1"
            android:backgroundTint="#FF6F61"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_2"
            android:backgroundTint="#FF6F61"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_3"
            android:backgroundTint="#FF6F61"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/buttonDivide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_divSimbol"
            android:backgroundTint="#00ADEF"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_4"
            android:backgroundTint="#FF6F61"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_5"
            android:backgroundTint="#FF6F61"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_6"
            android:backgroundTint="#FF6F61"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />



        <Button
            android:id="@+id/buttonMultiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_multSimbol"
            android:backgroundTint="#00ADEF"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_7"
            android:backgroundTint="#FF6F61"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_8"
            android:backgroundTint="#FF6F61"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_9"
            android:backgroundTint="#FF6F61"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_substSimbol"
            android:backgroundTint="#00ADEF"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/buttonCE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guillece"
            android:backgroundTint="#FF6F61"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/button0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_0"
            android:backgroundTint="#FF6F61"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/buttonEquals"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_eqSimbol"
            android:backgroundTint="#00FF00"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_Guille_addSimbol"
            android:backgroundTint="#00ADEF"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/buttonDecimal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_GuilleDecimal"
            android:backgroundTint="#00ADEF"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonBackspace"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/calculadora_GuilleBackspace"
            android:backgroundTint="#00ADEF"
            android:textColor="@color/Teal"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonOut"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salircalcalvaro"
        android:backgroundTint="@color/red"
        android:textColor="@color/Teal"
        android:textSize="30sp"
        android:layout_marginBottom="10dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>




