<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3A4750"
    tools:context=".IMCResultado">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/resultado"
        android:layout_marginTop="30dp"
        android:textStyle="italic|bold"
        android:textColor="#EEEEEE"
        android:textSize="30sp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text="@string/explicaci_n_de_resultado"
        android:layout_marginTop="100dp"
        android:textStyle="italic|bold"
        android:textColor="#EEEEEE"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/txtsexo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="155dp"
        android:textColor="#EEEEEE"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/txtIMC"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_marginTop="130dp"
        android:textColor="#EEEEEE"
        android:textSize="20sp"/>


    <TextView
        android:id="@+id/txtexplicacion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:text=""
        android:layout_marginTop="190dp"
        android:textColor="#EEEEEE"
        android:textSize="20sp"/>

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@id/btn_SalirResultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="30dp"
        />



    <Button
        android:id="@+id/btn_SalirResultado"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#EEEEEE"
        android:text="@string/salirIMC"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="#3A4750"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="50dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>