<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dddddd"
    tools:context=".CalculadoraIMC">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardview1"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#3A4750"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/signomasc"
                android:contentDescription="@string/hombres" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="140dp"
                android:text="@string/hombres"
                android:textStyle="bold"
                android:textColor="#EEEEEE"
                android:textSize="20sp"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:backgroundTint="#3A4750"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/signofem"
            android:contentDescription="@string/signomujer" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/mujeres"
            android:textStyle="bold"
            android:textColor="#EEEEEE"
            android:textSize="20sp"/>
    </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="175dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:backgroundTint="#3A4750"
        app:layout_constraintTop_toBottomOf="@+id/cardview1"
        app:layout_constraintStart_toStartOf="@id/cardview1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altura"
                android:textStyle="bold"
                android:textColor="#EEEEEE"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"/>

            <TextView
                android:id="@+id/stringcm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_120cm"
                android:textStyle="bold"
                android:textColor="#EEEEEE"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"

                />
            <com.google.android.material.slider.RangeSlider
                android:id="@+id/slider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"/>
        </LinearLayout>






    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>